--- a/FleetRemote/Base.lproj/Main.storyboard
+++ b/FleetRemote/Base.lproj/Main.storyboard
@@ -30,7 +30,7 @@
                                     <rect key="frame" x="0.0" y="200" width="600" height="600"/>
                                 </variation>
                                 <variation key="heightClass=regular-widthClass=compact" fixedFrame="YES">
-                                    <rect key="frame" x="0.0" y="186" width="320" height="614"/>
+                                    <rect key="frame" x="0.0" y="186" width="320" height="445"/>
                                 </variation>
                             </tableView>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Address" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="cad-dM-T1N">
@@ -142,7 +142,7 @@
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <variation key="heightClass=regular-widthClass=compact" fixedFrame="YES">
-                                    <rect key="frame" x="0.0" y="223" width="320" height="513"/>
+                                    <rect key="frame" x="0.0" y="223" width="320" height="350"/>
                                 </variation>
                             </tableView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pVt-VJ-pOQ">
@@ -155,6 +155,9 @@
                                 <variation key="heightClass=regular-widthClass=compact" fixedFrame="YES">
                                     <rect key="frame" x="10" y="176" width="145" height="30"/>
                                 </variation>
+                                <connections>
+                                    <action selector="pressedStart:" destination="qLK-Mf-L3I" eventType="touchUpInside" id="zIe-cK-Cql"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ATz-6u-fju">
                                 <rect key="frame" x="-23" y="-15" width="46" height="30"/>
@@ -166,6 +169,9 @@
                                 <variation key="heightClass=regular-widthClass=compact" fixedFrame="YES">
                                     <rect key="frame" x="165" y="176" width="145" height="30"/>
                                 </variation>
+                                <connections>
+                                    <action selector="pressedStop:" destination="qLK-Mf-L3I" eventType="touchUpInside" id="hZV-lc-H83"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
